src/snapshots/mdfried__tests__first parse image previews.snap
---
source: src/main.rs
expression: terminal.backend()
---
"[80X[?7l[1B[80X[?7l[1A]66;s=2:n=7:d=7:w=5;Hello\                        " Hidden by multi-width symbols: [(1, " "), (2, " "), (3, " "), (4, " "), (5, " "), (6, " "), (7, " "), (8, " "), (9, " "), (10, " "), (11, " "), (12, " "), (13, " "), (14, " "), (15, " "), (16, " "), (17, " "), (18, " "), (19, " "), (20, " "), (21, " "), (22, " "), (23, " "), (24, " "), (25, " "), (26, " "), (27, " "), (28, " "), (29, " "), (30, " "), (31, " "), (32, " "), (33, " "), (34, " "), (35, " "), (36, " "), (37, " "), (38, " "), (39, " "), (40, " "), (41, " "), (42, " "), (43, " "), (44, " "), (45, " "), (46, " "), (47, " "), (48, " "), (49, " "), (50, " "), (51, " "), (52, " "), (53, " "), (54, " "), (55, " ")]
"                                                                                "
"This is a test markdown document. Another line of same paragraph.               "
"                                                                                "
"![image](./assets/NixOS.png)                                                    "
"                                                                                "
"[80X[?7l[1B[80X[?7l[1A]66;s=2:n=7:d=7:w=7;Another\]66;s=2:n=7:d=7:w=7; header\" Hidden by multi-width symbols: [(1, " "), (2, " "), (3, " "), (4, " "), (5, " "), (6, " "), (7, " "), (8, " "), (9, " "), (10, " "), (11, " "), (12, " "), (13, " "), (14, " "), (15, " "), (16, " "), (17, " "), (18, " "), (19, " "), (20, " "), (21, " "), (22, " "), (23, " "), (24, " "), (25, " "), (26, " "), (27, " "), (28, " "), (29, " "), (30, " "), (31, " "), (32, " "), (33, " "), (34, " "), (35, " "), (36, " "), (37, " "), (38, " "), (39, " "), (40, " "), (41, " "), (42, " "), (43, " "), (44, " "), (45, " "), (46, " "), (47, " "), (48, " "), (49, " "), (50, " "), (51, " "), (52, " "), (53, " "), (54, " "), (55, " "), (56, " "), (57, " "), (58, " "), (59, " "), (60, " "), (61, " "), (62, " "), (63, " "), (64, " "), (65, " "), (66, " "), (67, " "), (68, " "), (69, " "), (70, " "), (71, " "), (72, " "), (73, " "), (74, " "), (75, " "), (76, " "), (77, " "), (78, " "), (79, " ")]
"                                                                                "
"Some text                                                                       "
"                                                                                "
"[80X[?7l[1B[80X[?7l[1A]66;s=2:n=7:d=7:w=7;Last bi\]66;s=2:n=7:d=7:w=1;t\" Hidden by multi-width symbols: [(1, " "), (2, " "), (3, " "), (4, " "), (5, " "), (6, " "), (7, " "), (8, " "), (9, " "), (10, " "), (11, " "), (12, " "), (13, " "), (14, " "), (15, " "), (16, " "), (17, " "), (18, " "), (19, " "), (20, " "), (21, " "), (22, " "), (23, " "), (24, " "), (25, " "), (26, " "), (27, " "), (28, " "), (29, " "), (30, " "), (31, " "), (32, " "), (33, " "), (34, " "), (35, " "), (36, " "), (37, " "), (38, " "), (39, " "), (40, " "), (41, " "), (42, " "), (43, " "), (44, " "), (45, " "), (46, " "), (47, " "), (48, " "), (49, " "), (50, " "), (51, " "), (52, " "), (53, " "), (54, " "), (55, " "), (56, " "), (57, " "), (58, " "), (59, " "), (60, " "), (61, " "), (62, " "), (63, " "), (64, " "), (65, " "), (66, " "), (67, " "), (68, " "), (69, " "), (70, " "), (71, " "), (72, " "), (73, " "), (74, " "), (75, " "), (76, " "), (77, " "), (78, " "), (79, " ")]
"                                                                                "
"Goodbye.                                                                        "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                             1/1"
