src/snapshots/mdfried__tests__list_snapshot.snap
---
source: src/main.rs
expression: terminal.backend()
---
" 1. First ordered list item                                                     "
" 2. Another item                                                                "
"    - Unordered sub-list.                                                       "
" 3. Actual numbers don't matter, just that it's a number                        "
"    1. Ordered sub-list                                                         "
" 4. And another item.                                                           "
"    You can have properly indented paragraphs within list items. Notice the     "
"    blank line above, and the leading spaces (at least one, but we'll use three "
"    here to also align the raw Markdown).                                       "
"    To have a line break without a paragraph, you will need to use two trailing "
"    spaces.                                                                     "
"    Note that this line is separate, but within the same paragraph.             "
"    (This is contrary to the typical GFM line break behaviour, where trailing   "
"    spaces are not required.)                                                   "
" - Unordered list can use asterisks                                             "
" * Or minuses                                                                   "
" - Or pluses                                                                    "
" 1. Make my changes                                                             "
"    1. Fix bug                                                                  "
"    2. Improve formatting                                                       "
"       - Make the headings bigger                                               "
" 2. Push my commits to GitHub                                                   "
" 3. Open a pull request                                                         "
"    - Describe my changes                                                       "
"    - Mention all the members of my team                                        "
"      - Ask for feedback                                                        "
" - Create a list by starting a line with +, -, or *                             "
" - Sub-lists are made by indenting 2 spaces:                                    "
"   - Marker character change forces new list start:                             "
"     - Ac tristique libero volutpat at                                          "
"     * Facilisis in pretium nisl aliquet                                        "
"     - Nulla volutpat aliquam velit                                             "
" - Very easy!                                                                   "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
