src/snapshots/mdfried__tests__md_snapshot.snap
---
source: src/main.rs
expression: terminal.backend()
---
" Markdown Fried!                                                                                                        "
"                                                                                                                        "
" You can cook a terminal. Can you deep fry a terminal?                                                                  "
" YES! You can have cooked and fried widgets!                                                                            "
" Is this insane?                                                                                                        "
"                                                                                                                        "
" Another paragraph now, which should get wrapped without breaking up words, nor whitespace at the beginning of lines.   "
" This is very primitive and fragile, for example, what happens with multi-width characters? Yes, they will probably     "
" cause havoc. It's impossible to know how wide a character will be in the terminal.                                     "
"                                                                                                                        "
" Tier 2 heading                                                                                                         "
"                                                                                                                        "
" Tier 3 heading                                                                                                         "
"                                                                                                                        "
" Tier 4 heading                                                                                                         "
"                                                                                                                        "
" Tier 5 heading                                                                                                         "
"                                                                                                                        "
" Tier 6 heading                                                                                                         "
"                                                                                                                        "
" Local image:                                                                                                           "
" ![Loading...](./assets/NixOS.png)                                                                                      "
"                                                                                                                        "
"                                                                                                                        "
" URL image:                                                                                                             "
" ![Loading...](https://picsum.photos/300/200)                                                                           "
"                                                                                                                        "
"                                                                                                                        "
" Broken image link:                                                                                                     "
" ![Loading...](https://example.com/404)                                                                                 "
"                                                                                                                        "
"                                                                                                                        "
" Looooooooooooooooong heading, so long that it will never fit a reasonably large terminal. No I don't care how big your "
"                                                                                                                        "
" Can it render emojis? 🤣 No.                                                                                           " Hidden by multi-width symbols: [(24, " ")]
"                                                                                                                        "
" Unwrapped looooong paragraph:                                                                                          "
"                                                                                                                        "
" In a world shrouded in darkness and flame, the universe of Dark Souls begins with the Age of Ancients, a time of gray  "
" crags, archtrees, and everlasting dragons, where nothing changed and life as we know it did not yet exist. From the    "
" dark abyss, a primordial fire—the First Flame—burst into existence, bringing with it the dichotomies of light and      "
" dark, heat and cold, life and death. In the flame's heart, powerful souls emerged, claimed by beings who would shape   "
" the fate of the world: Gwyn, the Lord of Sunlight; the Witch of Izalith; Nito, the First of the Dead; and the Furtive  "
" Pygmy, who is largely forgotten but gives humanity its dark soul. Gwyn and his allies waged war against the dragons,   "
" using lightning bolts to shatter their scales, the Witch's pyromancies to raze their domains, and Nito’s miasma of     "
" death to rot their immortal forms. The war ended with the rise of the Age of Fire, as Gwyn’s dominion spread over the  "
" land and civilization flourished under his rule. However, fire is transient, and as the First Flame began to fade,     "
" humanity’s darkness stirred. The Undead Curse appeared, marking people with the Darksign, trapping them in a cycle     "
" of death and resurrection that slowly eroded their sanity. In desperation, Gwyn sought to prolong the Age of Fire by   "
" sacrificing himself to rekindle the flame, becoming a hollow shell of his former self, a god reduced to a smoldering   "
" cinder. The world began to crumble into decay, with kingdoms rising and falling like leaves in the wind, each trying   "
" and failing to resist the inevitable dark. The player, a cursed Undead, awakens in a world on the brink of collapse,   "
" journeying through shattered lands filled with remnants of past glories, grotesque creatures, and tragic figures       "
" whose ambitions and hubris led to their ruin. Along the way, the player faces impossible choices: to link the fire and "
" perpetuate the cycle, embracing the flame’s tyranny, or to usher in the Age of Dark, allowing humanity’s true nature   "
" to take hold. These choices echo the eternal struggle between light and dark, a dance of entropy and renewal in a      "
" universe indifferent to the suffering of its inhabitants.                                                              "
"                                                                                                                        "
" ![Loading...](./assets/you_fried.png)                                                                                  "
"                                                                                                                        "
"                                                                                                                        "
" THE END                                                                                                                "
"                                                                                                                        "
"                                                                                                                        "
