src/snapshots/mdfried__tests__reload add image preview.snap
---
source: src/main.rs
expression: terminal.backend()
---
"[80X[?7l[1B[80X[?7l[1A]66;s=2:n=7:d=7:w=5;Hello\                        " Hidden by multi-width symbols: [(1, " "), (2, " "), (3, " "), (4, " "), (5, " "), (6, " "), (7, " "), (8, " "), (9, " "), (10, " "), (11, " "), (12, " "), (13, " "), (14, " "), (15, " "), (16, " "), (17, " "), (18, " "), (19, " "), (20, " "), (21, " "), (22, " "), (23, " "), (24, " "), (25, " "), (26, " "), (27, " "), (28, " "), (29, " "), (30, " "), (31, " "), (32, " "), (33, " "), (34, " "), (35, " "), (36, " "), (37, " "), (38, " "), (39, " "), (40, " "), (41, " "), (42, " "), (43, " "), (44, " "), (45, " "), (46, " "), (47, " "), (48, " "), (49, " "), (50, " "), (51, " "), (52, " "), (53, " "), (54, " "), (55, " ")]
"                                                                                "
"This is a test markdown document.                                               "
"                                                                                "
"   ▗▀.╶▀𜶻.▀🬏                                                                    "
"  ▂𜶭🮢🬁🬭🬌🬼𜺨🭝🭗˛                                                                   "
" 𜴃▀▀.🭝▀▀▀🬼▝🭠΄🭬                                                                  "
"𜶤🮂🮂𜺨🭉🭗   🭢🭔΄🭢🬂🬊                                                                 "
"🭢🭟.🭠.🬿   🭄·🭚▔▔⠁                                                                 "
" 🭢🭆 𜴍▀.▂▂▌⢀▂🭊΄                                                                  "
"   ▌🭝🬂🬼🭏.🭥▁🭬                                                                    "
"                                                                                "
"![image](./assets/you_fried.png)                                                "
"                                                                                "
"Goodbye.                                                                        "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
